# cryptopad

./: Cargo.toml  README.md  test.txt
cryptopad/: Cargo.toml
cryptopad-ui/: Cargo.toml
cryptopad-ui/src/: main.rs
cryptopad/src/: lib.rs
