[package]
name = "cryptopad-ui"
version = "0.1.0"
authors = ["Connor Brewster <connor.brewster@eagles.oc.edu>"]
edition = "2018"

[dependencies]
cryptopad = { path = "../cryptopad" }
gtk-sys = "0.7.0"
relm-attributes = "0.15.0"
relm = "0.15.0"
relm-derive = "0.15.0"

[dependencies.gtk]
version = "0.5.0"
features = ["v3_18"]

[dependencies.gio]
version = "0.5.0"
features = ["v2_50"]

[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]

